[gd_scene load_steps=10 format=3 uid="uid://bsmfko6hjnhb4"]

[ext_resource type="Script" uid="uid://b6v0sgtetx4w" path="res://scenes_and_scripts/augments/reward_giver.gd" id="1_2i5ks"]
[ext_resource type="Texture2D" uid="uid://d1j1m5hhit48j" path="res://assets/Dungeon tileset/Dungeon tileset.png" id="2_bu1n8"]
[ext_resource type="Resource" uid="uid://cj1lvijrb5i7n" path="res://resources/augments/laser.tres" id="2_gfxti"]
[ext_resource type="Texture2D" uid="uid://dlrwy0fvoom2q" path="res://assets/sword.png" id="3_bu1n8"]
[ext_resource type="FontFile" uid="uid://cru3dwflnfalj" path="res://assets/Old Fax.ttf" id="5_mlmt4"]

[sub_resource type="LabelSettings" id="LabelSettings_84qs5"]
font = ExtResource("5_mlmt4")

[sub_resource type="Theme" id="Theme_y56kr"]
default_font = ExtResource("5_mlmt4")
default_font_size = 10

[sub_resource type="Theme" id="Theme_gfxti"]
default_font = ExtResource("5_mlmt4")
default_font_size = 10

[sub_resource type="CircleShape2D" id="CircleShape2D_nmmih"]
radius = 24.1868

[node name="RewardGiver" type="Node2D"]
script = ExtResource("1_2i5ks")
resource = ExtResource("2_gfxti")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bu1n8")
hframes = 34
vframes = 7
frame = 115

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -90.0
offset_right = 50.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 100)
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.58
anchor_bottom = 0.766667
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_bu1n8")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Attack Effect"
label_settings = SubResource("LabelSettings_84qs5")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_y56kr")
text = "Very Descriptive Text"
fit_content = true

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gfxti")
text = "Press Attack To pick"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_nmmih")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
